--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Confirm Your Payment</h1>
+        <h1>Confirm Your Payment with E-pay</h1>
         <div class="first-row">
             <div class="owner">
                 <h3>Owner</h3>
