--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Confirm Your Payment with E-pay</h1>
         <div class="first-row">
             <div class="owner">
-                <h3>Owner</h3>
+                <h3>Name Of the Owner</h3>
                 <div class="input-field">
                     <input type="text">
                 </div>
